--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ CLIENT_URL=http://localhost:5030
 # PostgreSQL 資料庫配置
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=spec_driven_dev
+DB_NAME=postgres
 DB_USER=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=1234
 
 # 資料庫連線池配置
 DB_POOL_MAX=20
@@ -23,9 +23,6 @@ DB_CONNECTION_TIMEOUT=2000
 # 資料庫 SSL 配置（生產環境建議開啟）
 DB_SSL=false
 DB_SSL_REJECT_UNAUTHORIZED=true
-
-# JWT 密鑰（如需要）
-# JWT_SECRET=your-secret-key-here
 
 # 其他配置
 LOG_LEVEL=info
