--- a/package.json
+++ b/package.json
@@ -18,13 +18,22 @@
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "log:request": "node scripts/log-request.js",
-  "psd:generate": "node scripts/generate-psd-manifest.js",
+    "psd:generate": "node scripts/generate-psd-manifest.js",
     "mindmap:rebalance": "tsx scripts/rebalance-mindmap.ts",
     "mindmap:check-handles": "tsx scripts/check-edge-handles.ts",
-    "mindmap:migrate-handles": "tsx scripts/migrate-add-edge-handles.ts"
+    "mindmap:migrate-handles": "tsx scripts/migrate-add-edge-handles.ts",
+    "db:create-test-table": "tsx server/database/create-test-table.ts",
+    "db:drop-test-table": "tsx server/database/create-test-table.ts drop",
+    "db:test": "tsx server/database/test-table-operations.ts",
+    "db:create-tables": "tsx server/database/auto-create-tables.ts create",
+    "db:export-sql": "tsx server/database/auto-create-tables.ts export",
+    "db:drop-tables": "tsx server/database/auto-create-tables.ts drop",
+    "db:table-config-examples": "tsx server/database/table-config-examples.ts",
+    "db:project-index-examples": "tsx server/database/project-index-examples.ts"
   },
   "dependencies": {
     "@types/dagre": "^0.7.53",
+    "@types/pg": "^8.15.5",
     "commander": "^12.1.0",
     "cors": "^2.8.5",
     "dagre": "^0.8.5",
@@ -32,6 +41,7 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactflow": "^11.11.4",
